--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       href="https://fonts.googleapis.com/css2?family=Qwitcher+Grypen:wght@700&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React + TS</title>
+    <title>Ezizgeldi Helleňow</title>
   </head>
   <body>
     <div id="root"></div>
